--- a/web/app/themes/meghan/package.json
+++ b/web/app/themes/meghan/package.json
@@ -20,6 +20,8 @@
     "@tailwindcss/vite": "^4.0.9",
     "laravel-vite-plugin": "^1.2.0",
     "tailwindcss": "^4.0.9",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "tinycolor2": "^1.6.0",
+    "culori": "^4.0.1"
   }
 }
