--- a/web/app/themes/meghan/package.json
+++ b/web/app/themes/meghan/package.json
@@ -17,11 +17,9 @@
   },
   "devDependencies": {
     "@roots/vite-plugin": "^1.0.2",
-    "@tailwindcss/vite": "^4.0.9",
     "laravel-vite-plugin": "^1.2.0",
-    "tailwindcss": "^4.0.9",
-    "vite": "^6.2.0",
-    "tinycolor2": "^1.6.0",
-    "culori": "^4.0.1"
+    "sass": "^1.86.3",
+    "tailwindcss": "4.0.14",
+    "vite": "^6.2.0"
   }
 }
